--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div id="particles-js" ></div>
 
-    <section id="signin" class="login col-lg-5 py-5 rounded">
+    <section id="signin" class="login col-lg-5 col-10 py-5 rounded">
         <img src="images/logo.jpg" alt="logo">
         <h1 id="loginH1" class="mb-4">Sign in to fitness Heroes</h1>
        <input class="form-control w-75 mt-3" type="text" placeholder="Enter your email">
@@ -24,7 +24,7 @@
       
       </section>
       
-      <section id="signup" class="d-none login col-lg-5 py-5 rounded">
+      <section id="signup" class="d-none login col-lg-5 col-10 py-5 rounded">
         <img src="images/logo.jpg" alt="logo">
         <h1 class="mb-4">Join fitness Heroes today</h1>
         <input class="form-control w-75" type="text" placeholder="Enter your name">
