--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <section id="signin" class="login col-lg-5 col-10 py-5 rounded">
         <img src="images/logo.jpg" alt="logo">
-        <h1 id="loginH1" class="mb-4">Sign in to fitness Heroes</h1>
+        <h1 id="loginH1" class="mb-4">Sign in to Heroes</h1>
        <input class="form-control w-75 mt-3" type="text" placeholder="Enter your email">
        <input class="form-control w-75 mt-3" type="password" placeholder="Enter your password">
        <div class="w-75 d-none alert alert-danger py-2 my-2">please Enter a valid Email or password</div>
